fixed css and dash routes

--- a/src/components/dashstyle.css
+++ b/src/components/dashstyle.css
@@ -15,7 +15,7 @@
   .logo {
     height: 32px;
     margin: 16px;
-    width: 80%;
+    /* width: 80%; */
     background: rgba(255, 255, 255, 0.3);
   }
   
